# cfp-review

./: .gitignore  AGENTS.md  DESIGN_GUIDE.md  DESIGN_SYSTEM.md  FRONTEND_DESIGN.md  MERISE_PLAN.md  README.md  SYSTEM_DESIGN.md  docker-compose.yml  manage.py  pyproject.toml  schema.dbml
cfp_review/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
proposals/: admin.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
proposals/migrations/: 0001_initial.py  0002_create_user_roles.py  0003_rolerequest.py
static/css/: styles.css
templates/: base.html  home.html
templates/account/: login.html  signup.html
templates/components/: card.html  navbar.html
templates/proposals/: proposal_confirm_delete.html  proposal_detail.html  proposal_form.html  proposal_list.html  role_request_form.html
templates/users/: settings.html
users/: forms.py  urls.py  views.py
