[project]
name = "cfp-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-allauth>=65.14.0",
    "neapolitan>=25.1",
    "psycopg[binary]>=3.0.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
]
